2008-05-15  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CheckDocumentData): Fixed to use parse_date to get
	the GDate from the date string set by calendar_display.

	* utils.c (parse_date): Created this function to deal with a parse
	of date and return a GDate, this should not be useful when
	g_date_set_parse deal with DDMMYY date format.

	* compras.c (CheckDocumentData): Changed to deal with invoice and
	guide at the same time. We really need a better way to check data.

2008-05-12  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (IngresarFactura): The n_doc argument and
	the arguments related to date all moved to gint.

	* compras.c (IngresarCompra): Added the invoice argument to know
	when we will ingress an invoice or not.

	* utils.c (display_calendar): Added a -1 when set the month on the
	GtkCalendar, this sinces GtkCalendar set the months from 0 to 11
	and GDate set them from 1 to 12 and left 0 for a bad month. Also
	add  valid date check.

2008-05-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c: (check_regexp): Drop function. It should't ever be here.

	* utils.c (display_calendar): Fixed the position of the
	GtkCalendar and drop the use of the vbox to put the calendar
	inside the GtkWindow. Some order and drop the use of unnecessary functions.
	(validate_string): Add function.

2008-05-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c: Added this function to display a calendar ander a
	button and put the selected date into a GtkEntry. This is to
	replace the GnomeDateEdit widget that isn't supported yet with GtkBuilder.

2008-04-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (SearchProductHistory|AddToProductsList): Use of GtkBuilder.
	(ShowProductDescription|compras_win): Deleted commented code. We
	have VC use it if you want to read old code.
	(FillDataProduct): Deleted function. It was just commented code.
	(AddToProductsList): Use GtkBuilder. Add some brackets.