@@ -3538,6 +3538,7 @@
                   <object class="GtkEntry" id="entry_ingress_guide_date">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="editable">False</property>
                   </object>
                 </child>
                 <child>
